--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
-# eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-# spring.application.name=notifications-service
-# server.port=8081
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.application.name=notifications-service
+server.port=8081
 my.greeting=hello from github
 # spring.cloud.config.uri=http://config-server
