--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,8 @@
 management:
-  endpoint:
-    health:
-      show-details: always
+  endpoints:
+    web:
+      exposure: 
+        inlcude: "*"
 eureka:
   client:
     serviceUrl:
