--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,8 @@
 management:
   endpoints:
     web:
-      exposure: 
-        inlcude: "*"
+      exposure:
+        include: '*'
 eureka:
   client:
     serviceUrl:
